# converterfartocel

./: .gitignore  README.md  converterfartocel.py  fartocel.py  pyproject.toml  setup.cfg  test_converterfartocel.py  test_fartocel.py
fartocel/: converters.py
fartocel/tests/: test_converters.py
project-poetry/project_poetry/fartocel/tests/: test_converters.py
